# FSE_team1_project

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALL-cmake.md  README.md  build.sh  calculator.cpp  calculator.h  digit_predictor.py  main.cpp  pch.cpp  pch.h  prereqs.sh  requirements.txt  test.py  test.sh
.github/workflows/: building.yaml  testing copy.yaml  testing.yaml
make/: CMakeLists.txt  main.cpp
make/win/: .gitignore  win-on-lattice.sln
python/: .gitignore  CMakeLists.txt  all-compile.bat  all-compile.sh  compile.bat  compile.sh  img_calculator.pyx  img_decl.pxd  lib_cython.cpp  lib_cython.h  setup.py
src/: digit_predictor.py
src/test/: test.py  test.sh  test_digit_Predictor.py  test_digit_predictor.py
test/: .gitignore  example-CalculatorUsage.ipynb  example-CalculatorUsage.py  img.py  test.py
